# barq-coder

./: .gitignore  CHANGELOG.md  Cargo.toml  Config.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
components/barqdb/: Cargo.toml
components/barqdb/src/: lib.rs
components/barqgraph/: Cargo.toml
components/barqgraph/src/: lib.rs
components/rusty_ollama/: Cargo.toml
components/rusty_ollama/src/: lib.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  TOOLS.md
editors/vscode/: package.json
editors/vscode/src/: commands.ts  extension.ts
examples/: 01_hello_world.md  02_refactoring.md  03_debugging.md  04_writing_tests.md  05_multi_agent.md
scripts/: install.sh  loadtest.sh  setup.sh
src/: agent.rs  barq.rs  config.rs  lib.rs  macro_goals.rs  main.rs  orchestrator.rs  session.rs  tui.rs  verifier.rs
src/agents/: coder.rs  coordinator.rs  mod.rs  reviewer.rs  tester.rs
src/collab/: auth.rs  client.rs  mod.rs  server.rs  sync.rs  tui.rs
src/lsp/: codeaction.rs  completion.rs  diagnostic.rs  hover.rs  mod.rs
src/symbolic/: borrow_hint.rs  cycle_detect.rs  dead_code.rs  mod.rs  perf.rs  rules.rs  security.rs  type_check.rs  unsafe_check.rs
src/tools/: barq_search.rs  bench.rs  cargo_check.rs  edit_file.rs  file_ops.rs  mod.rs  shell.rs  workspace.rs
src/tools/bench/: baseline.rs  compare.rs  profile.rs  regress.rs  suggest.rs
src/voice/: mod.rs  stt.rs  tts.rs  vad.rs
testdata/: sample.rs
testdata/bad_rust/: Cargo.toml
tests/: test_barq.rs  test_orchestrator.rs  test_tools.rs
(+1 files in other folders)
