[package]
name = "barqcoder"
version = "0.1.0"
edition = "2021"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full", "process"] }
ratatui = "0.28.1"
crossterm = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
syn = { version = "2.0", features = ["full"] }
walkdir = "2.5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
barqdb = { path = "../barq/barqdb" }
barqgraph = { path = "../barq/barqgraph" }
rusty-ollama = { git = "https://github.com/lowpolycat1/rusty_ollama" }
